--- a/templates/main.tex
+++ b/templates/main.tex
@@ -80,10 +80,9 @@
 \usepackage{array}
 \usepackage{ragged2e}
 
-    \newcolumntype{P}[1]{>{\centering\arraybackslash}p{#1}}
-    \newcolumntype{M}[1]{>{\centering\arraybackslash}m{#1}}
-
-%\newcolumntype{P}[1]{>{\RaggedRight\hspace{0pt}}p{#1}}
+\newcolumntype{P}[1]{>{\centering\arraybackslash}p{#1}}
+\newcolumntype{M}[1]{>{\centering\arraybackslash}m{#1}}
+\newcolumntype{L}[1]{>{\RaggedRight\hspace{0pt}}p{#1}}
 %\newcolumntype{C}[1]{>{\centering\arraybackslash\hspace{0pt}}p{#1}}
 
 
