--- a/templates/zotero.bib
+++ b/templates/zotero.bib
@@ -1,4 +1,22 @@
 
+@mastersthesis{palma_dynamic_2014,
+	address = {Cambridge, Mass.},
+	title = {Dynamic capabilities in related diversification: the case of geothermal technology development by oil companies},
+	school = {Massachusetts Institute of Technology},
+	author = {Palma, Rodrigo Salvador Garćia},
+	year = {2014},
+	note = {Publisher: Massachusetts Institute of Technology},
+}
+
+@misc{nasa_s3001_2017,
+	title = {S3001: {Guidelines} for {Risk} {Management} {Version}: {G}},
+	url = {https://www.nasa.gov/sites/default/files/atoms/files/s3001_guidelines_for_risk_management_-_ver_g_-_10-25-2017.pdf},
+	urldate = {2021-07-24},
+	author = {{NASA}},
+	month = oct,
+	year = {2017},
+}
+
 @inproceedings{mines_geothermal_2008,
 	address = {Stanford, California},
 	title = {Geothermal electricity technologies evaluation model {DOE} tool for assessing impact of research on cost of power},
